# module

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: benchmark.yaml
example/: basic_usage.py
experiments/: __init__.py  run_benchmark.py  run_rag_eval.py
src/: __init__.py
src/core/: __init__.py  eliminator.py  forgetting.py  normalizer.py  ontology.py
src/evaluation/: __init__.py  bio_rag_bench.py
src/rag/: __init__.py  pipeline.py
src/utils/: __init__.py  owl_parser.py
test/: __init__.py  test_forgetting.py  test_ontology.py
